tests/dataset/tpc-ds/compiler/pl/q38.error
run: exit status 2
ERROR: /tmp/q38.pl:65: user:main '<meta-call>'/1: Unknown procedure: contains/3
